11_Grammars/t59Parser/T59v1/t59Parser/gen/t59Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from t59.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class t59Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, WS=11, LineComment=12, Bang=13, Program_separator=14, I11_a=15, 
		I12_b=16, I13_c=17, I14_d=18, I15_e=19, I16_a_prime=20, I17_b_prime=21, 
		I18_c_prime=22, I19_d_prime=23, I10_e_prime=24, I21_2nd=25, I22_invert=26, 
		I23_ln=27, I24_correct_entry=28, I25_clear=29, I26_2nd_2nd=30, I27_2nd_invert=31, 
		I28_log=32, I29_clear_program=33, I20_2nd_clear=34, I31_learn=35, I32_exchange_x_and_t=36, 
		I33_square=37, I34_square_root=38, I35_reciprocal=39, I36_program=40, 
		I37_polar_to_rectangular=41, I38_sin=42, I39_cos=43, I30_tan=44, I41_single_step=45, 
		I42_store=46, I43_recall=47, I44_sum=48, I45_power=49, I46_insert=50, 
		I47_clear_memory=51, I48_exchange=52, I49_product=53, I40_indirect=54, 
		I51_backstep=55, I52_exponent=56, I53_left_parenthesis=57, I54_right_parenthesis=58, 
		I55_divide=59, I56_delete=60, I57_engineering=61, I58_fix=62, I59_integer=63, 
		I50_absolute=64, I61_goto=65, I62_program_indirect=66, I63_exchange_indirect=67, 
		I64_product_indirect=68, I65_multiply=69, I66_pause=70, I67_x_equals_t=71, 
		I67_x_equals_t_indextra=72, I68_nop=73, I69_operation=74, I60_degrees=75, 
		I71_subroutine=76, I72_store_indirect=77, I73_recall_indirect=78, I74_sum_indirect=79, 
		I75_subtract=80, I76_label=81, I77_x_greater_or_equal_than_t=82, I77_x_greater_or_equal_than_t_indextra=83, 
		I78_sigma_plus=84, I79_average=85, I70_radians=86, I81_reset=87, I82_hir=88, 
		I83_goto_indirect=89, I84_operation_indirect=90, I85_add=91, I86_set_flag=92, 
		I87_if_flag=93, I88_dms=94, I89_pi=95, I80_grades=96, I91_run_stop=97, 
		I92_return=98, I93_dot=99, I94_change_sign=100, I95_equals=101, I96_write=102, 
		I97_dsz=103, I98_advance=104, I99_print=105, I90_list=106, I123_e_power_x=107, 
		I128_10_power_x=108, INVALID_TOKEN=109;
	public const int
		RULE_d = 0, RULE_number = 1, RULE_single_digit = 2, RULE_memory = 3, RULE_indmemory = 4, 
		RULE_pgm_number = 5, RULE_address_label = 6, RULE_numeric_key_label = 7, 
		RULE_op_number = 8, RULE_startRule = 9, RULE_programs = 10, RULE_program = 11, 
		RULE_instruction_or_comment = 12, RULE_instruction = 13, RULE_instruction_invert_isolated = 14, 
		RULE_inv = 15, RULE_instruction_atomic_simple = 16, RULE_instruction_atomic_invertible = 17, 
		RULE_instruction_atomic_inverted = 18, RULE_instruction_fix = 19, RULE_instruction_setflag = 20, 
		RULE_single_digit_or_indirect = 21, RULE_instruction_op = 22, RULE_op_number_or_indirect = 23, 
		RULE_indirect_memory = 24, RULE_instruction_pgm = 25, RULE_pgm_number_or_indirect = 26, 
		RULE_instruction_memory = 27, RULE_memory_or_indirect = 28, RULE_instruction_label = 29, 
		RULE_instruction_branch = 30, RULE_address_or_label_or_indirect = 31, 
		RULE_key_label = 32, RULE_instruction_conditional = 33, RULE_instruction_x_equals_t = 34, 
		RULE_instruction_x_greater_or_equal_than_t = 35, RULE_instruction_decrement_and_skip_on_zero = 36, 
		RULE_instruction_test_flag = 37, RULE_instruction_invalid = 38;
	public static readonly string[] ruleNames = {
		"d", "number", "single_digit", "memory", "indmemory", "pgm_number", "address_label", 
		"numeric_key_label", "op_number", "startRule", "programs", "program", 
		"instruction_or_comment", "instruction", "instruction_invert_isolated", 
		"inv", "instruction_atomic_simple", "instruction_atomic_invertible", "instruction_atomic_inverted", 
		"instruction_fix", "instruction_setflag", "single_digit_or_indirect", 
		"instruction_op", "op_number_or_indirect", "indirect_memory", "instruction_pgm", 
		"pgm_number_or_indirect", "instruction_memory", "memory_or_indirect", 
		"instruction_label", "instruction_branch", "address_or_label_or_indirect", 
		"key_label", "instruction_conditional", "instruction_x_equals_t", "instruction_x_greater_or_equal_than_t", 
		"instruction_decrement_and_skip_on_zero", "instruction_test_flag", "instruction_invalid"
	};

	private static readonly string[] _LiteralNames = {
		null, "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", 
		null, null, "'!'", "'END'", "'A'", "'B'", "'C'", "'D'", "'E'", "'A''", 
		"'B''", "'C''", "'D''", "'E''", "'2nd'", "'INV'", "'lnx'", "'CE'", "'CLR'", 
		"'2nd''", "'INV''", "'log'", "'CP'", "'CLR''", "'LRN'", null, null, null, 
		"'1/x'", "'Pgm'", null, "'sin'", "'cos'", "'tan'", "'SST'", "'STO'", "'RCL'", 
		"'SUM'", null, "'Ins'", "'CMs'", "'Exc'", "'Prd'", "'Ind'", "'BST'", "'EE'", 
		"'('", "')'", null, "'Del'", "'Eng'", "'Fix'", "'Int'", null, "'GTO'", 
		"'PG*'", "'EX*'", "'PD*'", null, null, null, "'EQ*'", "'Nop'", "'Op'", 
		"'Deg'", "'SBR'", "'ST*'", "'RC*'", "'SM*'", "'-'", "'Lbl'", null, "'GE*'", 
		null, null, "'Rad'", "'RST'", "'HIR'", "'GO*'", "'Op*'", "'+'", "'STF'", 
		"'IFF'", null, null, null, "'R/S'", "'RTN'", "'.'", "'+/-'", "'='", null, 
		"'Dsz'", "'Adv'", "'Prt'", null, "'e^x'", "'10^x'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "WS", 
		"LineComment", "Bang", "Program_separator", "I11_a", "I12_b", "I13_c", 
		"I14_d", "I15_e", "I16_a_prime", "I17_b_prime", "I18_c_prime", "I19_d_prime", 
		"I10_e_prime", "I21_2nd", "I22_invert", "I23_ln", "I24_correct_entry", 
		"I25_clear", "I26_2nd_2nd", "I27_2nd_invert", "I28_log", "I29_clear_program", 
		"I20_2nd_clear", "I31_learn", "I32_exchange_x_and_t", "I33_square", "I34_square_root", 
		"I35_reciprocal", "I36_program", "I37_polar_to_rectangular", "I38_sin", 
		"I39_cos", "I30_tan", "I41_single_step", "I42_store", "I43_recall", "I44_sum", 
		"I45_power", "I46_insert", "I47_clear_memory", "I48_exchange", "I49_product", 
		"I40_indirect", "I51_backstep", "I52_exponent", "I53_left_parenthesis", 
		"I54_right_parenthesis", "I55_divide", "I56_delete", "I57_engineering", 
		"I58_fix", "I59_integer", "I50_absolute", "I61_goto", "I62_program_indirect", 
		"I63_exchange_indirect", "I64_product_indirect", "I65_multiply", "I66_pause", 
		"I67_x_equals_t", "I67_x_equals_t_indextra", "I68_nop", "I69_operation", 
		"I60_degrees", "I71_subroutine", "I72_store_indirect", "I73_recall_indirect", 
		"I74_sum_indirect", "I75_subtract", "I76_label", "I77_x_greater_or_equal_than_t", 
		"I77_x_greater_or_equal_than_t_indextra", "I78_sigma_plus", "I79_average", 
		"I70_radians", "I81_reset", "I82_hir", "I83_goto_indirect", "I84_operation_indirect", 
		"I85_add", "I86_set_flag", "I87_if_flag", "I88_dms", "I89_pi", "I80_grades", 
		"I91_run_stop", "I92_return", "I93_dot", "I94_change_sign", "I95_equals", 
		"I96_write", "I97_dsz", "I98_advance", "I99_print", "I90_list", "I123_e_power_x", 
		"I128_10_power_x", "INVALID_TOKEN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "t59.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static t59Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public t59Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public t59Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DContext : ParserRuleContext {
		public DContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_d; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.EnterD(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.ExitD(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			It59Visitor<TResult> typedVisitor = visitor as It59Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitD(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DContext d() {
		DContext _localctx = new DContext(Context, State);
		EnterRule(_localctx, 0, RULE_d);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2046L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] I75_subtract() { return GetTokens(t59Parser.I75_subtract); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I75_subtract(int i) {
			return GetToken(t59Parser.I75_subtract, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I15_e() { return GetToken(t59Parser.I15_e, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I93_dot() { return GetToken(t59Parser.I93_dot, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DContext[] d() {
			return GetRuleContexts<DContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DContext d(int i) {
			return GetRuleContext<DContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I85_add() { return GetToken(t59Parser.I85_add, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			It59Visitor<TResult> typedVisitor = visitor as It59Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 2, RULE_number);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==I75_subtract) {
				{
				State = 80;
				Match(I75_subtract);
				}
			}

			State = 102;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
				{
				{
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 83;
					d();
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2046L) != 0) );
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I93_dot) {
					{
					State = 88;
					Match(I93_dot);
					State = 90;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 89;
						d();
						}
						}
						State = 92;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2046L) != 0) );
					}
				}

				}
				}
				break;
			case I93_dot:
				{
				{
				State = 96;
				Match(I93_dot);
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 97;
					d();
					}
					}
					State = 100;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2046L) != 0) );
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==I15_e) {
				{
				State = 104;
				Match(I15_e);
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I75_subtract || _la==I85_add) {
					{
					State = 105;
					_la = TokenStream.LA(1);
					if ( !(_la==I75_subtract || _la==I85_add) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 108;
					d();
					}
					}
					State = 111;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2046L) != 0) );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Single_digitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DContext d() {
			return GetRuleContext<DContext>(0);
		}
		public Single_digitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_single_digit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.EnterSingle_digit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.ExitSingle_digit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			It59Visitor<TResult> typedVisitor = visitor as It59Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingle_digit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Single_digitContext single_digit() {
		Single_digitContext _localctx = new Single_digitContext(Context, State);
		EnterRule(_localctx, 4, RULE_single_digit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 115;
				Match(T__0);
				}
				break;
			}
			State = 118;
			d();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemoryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DContext[] d() {
			return GetRuleContexts<DContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DContext d(int i) {
			return GetRuleContext<DContext>(i);
		}
		public MemoryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memory; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.EnterMemory(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			It59Listener typedListener = listener as It59Listener;
			if (typedListener != null) typedListener.ExitMemory(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			It59Visitor<TResult> typedVisitor = visitor as It59Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemory(this);
			else return visitor.VisitChildren(this);
		}
	}
